# Prescripta

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md
backend/: pyproject.toml  requirements-lock.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py
backend/app/core/: auth.py  config.py  constants.py  errors.py  security.py  version.py
backend/app/database/: models.py  seed.py  session.py
backend/app/domain/: alert.py  clinical_intelligence.py  medication.py  patient.py  prescription.py  user.py
backend/app/integrations/: __init__.py
backend/app/knowledge/: __init__.py  normalizer.py  rag_service.py  retriever.py
backend/app/reports/: __init__.py  ai_report_composer.py  audit.py  csv_exporter.py  evidence_bundle.py  json_exporter.py  pdf_renderer.py  renderer.py  schemas.py  service.py  templates.py
backend/app/repositories/: audit_repository.py  catalog_repository.py  (+4 more)
backend/tests/: conftest.py  test_ai_explainer.py  test_ai_settings_quality_v071.py  test_allergy_checker.py  test_auth_api.py  test_clinical_context_v04.py  test_clinical_intelligence_v083.py  test_clinical_intelligence_v084.py  test_clinical_safety_v06.py  test_counseling_functional_reconciliation_v07.py  test_dose_calculator.py  test_emergency_protocols_v082.py  test_hardening_v085.py  test_interaction_checker.py  test_interoperability_v06.py  test_medication_catalog_v05.py  test_prescription_api.py  test_product_readiness_v081.py  test_reports_exports_audit_v080.py  test_risk_engine.py
(+373 files in other folders)
