[project]
name = "prescripta-backend"
version = "8.6.0"
description = "Educational prescription safety API for Prescripta."
license = { text = "Apache-2.0" }
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
